--- a/repominggu6/websiteku/kontak.html
+++ b/repominggu6/websiteku/kontak.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" concent="width=devide-width, initial-scale=1.0">
-    <title> Personal Website </title>
+        <title> Personal Website </title>
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/png">
+    <link rel="icon" href="favicon-16x16.png" type="image/png">
 </head>
 <body bgcolor="#7c8ec2">
     <hr color="black" size="1">
