--- a/repominggu6/websiteku/tentang.html
+++ b/repominggu6/websiteku/tentang.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="sidht=device-width, initial-scale-1.0">
         <title> Personal Webside </title>
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/png">
+    <link rel="icon" href="favicon-16x16.png" type="image/png">
 
 </head>
 <body bgcolor="#7c8ec2">
